toto/config-values.yaml
---
# Source: sonarqube/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: config-values.yaml-sonarqube
  labels:
    app: sonarqube
    chart: sonarqube-9.4.3
    release: config-values.yaml
    heritage: Helm

spec:
  type: ClusterIP
  ports:
    - port: 9000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: sonarqube
    release: config-values.yaml
---
# Source: sonarqube/templates/sonarqube-sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: config-values.yaml-sonarqube
  labels:
    app: sonarqube
    chart: sonarqube-9.4.3
    release: config-values.yaml
    heritage: Helm
    app.kubernetes.io/name: sonarqube-config-values.yaml-sonarqube
    app.kubernetes.io/instance: config-values.yaml
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: sonarqube
    app.kubernetes.io/component: config-values.yaml-sonarqube
    app.kubernetes.io/version: "9.9.0-community"
spec:
  replicas: 1
  serviceName: config-values.yaml-sonarqube
  selector:
    matchLabels:
      app: sonarqube
      release: config-values.yaml
  template:
    metadata:
      labels:
        app: sonarqube
        release: config-values.yaml
      annotations:
        checksum/init-sysctl: 83e5a63540602f40ae4d102a625334a0938877881810a589f7c46eaaba6a4f9e
        checksum/init-fs: 6e66fe1fbc9b834a1ea6d491ee7005e884c8190c0bbfa5f640ab374bcf167d1e
        checksum/plugins: 0a09a2991f3254e7bfaf029f6bc8030adc9ea21ab01797c164f6d3dd62ae392b
        checksum/config: ed65a45b20716f84dd9c9037b2806aae2603b370ad2f468091cfec2d685e1359
        checksum/secret: a80ea85f565ef92ddc13bd6e062751623cca8477b1010a0ba0ff3e2ab5e643dd
        checksum/prometheus-config: 9ae96d94d0b4472b42d52a5a1f74544991fa87babeae031b3739545287d98dcf
        checksum/prometheus-ce-config: 4472cc4952b6bd1a0e0438a4fa47caeb7ba58fa6d5c8ba6d9e06af79e4b04ffb
    spec:      
      securityContext:
        fsGroup: 1000
      containers:
        - name: sonarqube
          image: "sonarqube:9.9.0-community"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 9000
              protocol: TCP
            - name: monitoring-web
              containerPort: 8000
              protocol: TCP
            - name: monitoring-ce
              containerPort: 8001
              protocol: TCP
          resources:
            limits:
              cpu: 800m
              memory: 4Gi
            requests:
              cpu: 400m
              memory: 2Gi
          livenessProbe:
            exec:
              command:
              - sh
              - -c
              - |
                host="$(hostname -i || echo '127.0.0.1')"
                reply=$(wget --no-proxy -qO- --header="X-Sonar-Passcode: $SONAR_WEB_SYSTEMPASSCODE" http://${host}:9000/api/system/liveness 2>&1)
                if [ -z "$reply" ]; then exit 0; else exit 1; fi
            initialDelaySeconds: 60
            periodSeconds: 30
            failureThreshold: 6
            timeoutSeconds: 1
          readinessProbe:
            exec:
              command:
              - sh
              - -c
              - |
                #!/bin/bash
                # A Sonarqube container is considered ready if the status is UP, DB_MIGRATION_NEEDED or DB_MIGRATION_RUNNING
                # status about migration are added to prevent the node to be kill while sonarqube is upgrading the database.
                host="$(hostname -i || echo '127.0.0.1')"
                if wget --no-proxy -qO- http://${host}:9000/api/system/status | grep -q -e '"status":"UP"' -e '"status":"DB_MIGRATION_NEEDED"' -e '"status":"DB_MIGRATION_RUNNING"'; then
                	exit 0
                fi
                exit 1
            initialDelaySeconds: 60
            periodSeconds: 30
            failureThreshold: 6
            timeoutSeconds: 1
          startupProbe:
            httpGet:
              scheme: HTTP
              path: /api/system/status
              port: http
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 24
            timeoutSeconds: 1
          securityContext:
            runAsUser: 1000
          volumeMounts:
            - mountPath: /opt/sonarqube/conf/
              name: concat-dir
            - mountPath: /opt/sonarqube/secret/
              name: secret
            - mountPath: /opt/sonarqube/data
              name: sonarqube
              subPath: data
            - mountPath: /opt/sonarqube/temp
              name: sonarqube
              subPath: temp
            - mountPath: /opt/sonarqube/logs
              name: sonarqube
              subPath: logs
            - mountPath: /tmp
              name: tmp-dir
            - mountPath: /opt/sonarqube/conf/prometheus-config.yaml
              subPath: prometheus-config.yaml
              name: prometheus-config
            - mountPath: /opt/sonarqube/conf/prometheus-ce-config.yaml
              subPath: prometheus-ce-config.yaml
              name: prometheus-ce-config
      serviceAccountName: default
      volumes:
      - name: config
        configMap:
          name: config-values.yaml-sonarqube-config
          items:
          - key: sonar.properties
            path: sonar.properties
      - name: secret-config
        secret:
          secretName: some-secret
          items:
          - key: secret.properties
            path: secret.properties
      - name: secret
        secret:
          secretName: settings-encryption-secret
          items:
          - key: sonar-secret.txt
            path: sonar-secret.txt
      - name: init-sysctl
        configMap:
          name: config-values.yaml-sonarqube-init-sysctl
          items:
            - key: init_sysctl.sh
              path: init_sysctl.sh
      - name: init-fs
        configMap:
          name: config-values.yaml-sonarqube-init-fs
          items:
            - key: init_fs.sh
              path: init_fs.sh
      - name: install-plugins
        configMap:
          name: config-values.yaml-sonarqube-install-plugins
          items:
            - key: install_plugins.sh
              path: install_plugins.sh
      - name: prometheus-config
        configMap:
          name: config-values.yaml-sonarqube-prometheus-config
          items:
            - key: prometheus-config.yaml
              path: prometheus-config.yaml
      - name: prometheus-ce-config
        configMap:
          name: config-values.yaml-sonarqube-prometheus-ce-config
          items:
            - key: prometheus-ce-config.yaml
              path: prometheus-ce-config.yaml
      - name: sonarqube
        emptyDir:
          {}
      - name : tmp-dir
        emptyDir:
          {}
      - name : concat-dir
        emptyDir:
          {}
---
# Source: sonarqube/templates/secret.yaml
---
---
# Source: sonarqube/templates/tests/sonarqube-test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "config-values.yaml-ui-test"
  annotations:
    "helm.sh/hook": test-success
  labels:
    app: sonarqube
    chart: sonarqube-9.4.3
    release: config-values.yaml
    heritage: Helm
spec:
  containers:
    - name: config-values.yaml-ui-test
      image: "bitnami/minideb-extras"
      imagePullPolicy: IfNotPresent
      command: [
        "/tools/bats/bin/bats",
        "--tap",
        "/tests/run.sh"]
      resources:
        {}
      volumeMounts:
      - mountPath: /tests
        name: tests
        readOnly: true
      - mountPath: /tools
        name: tools
  volumes:
  - name: tests
    configMap:
      name: config-values.yaml-sonarqube-tests
  - name: tools
    emptyDir: 
      {}
  restartPolicy: Never
