toto/ingress-values.yaml
---
# Source: sonarqube/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-values.yaml-sonarqube
  labels:
    app: sonarqube
    chart: sonarqube-9.4.3
    release: ingress-values.yaml
    heritage: Helm

spec:
  type: ClusterIP
  ports:
    - port: 9000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: sonarqube
    release: ingress-values.yaml
---
# Source: sonarqube/templates/sonarqube-sts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ingress-values.yaml-sonarqube
  labels:
    app: sonarqube
    chart: sonarqube-9.4.3
    release: ingress-values.yaml
    heritage: Helm
    app.kubernetes.io/name: sonarqube-ingress-values.yaml-sonarqube
    app.kubernetes.io/instance: ingress-values.yaml
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: sonarqube
    app.kubernetes.io/component: ingress-values.yaml-sonarqube
    app.kubernetes.io/version: "9.9.0-community"
spec:
  replicas: 1
  serviceName: ingress-values.yaml-sonarqube
  selector:
    matchLabels:
      app: sonarqube
      release: ingress-values.yaml
  template:
    metadata:
      labels:
        app: sonarqube
        release: ingress-values.yaml
      annotations:
        checksum/init-sysctl: d06543968f55fb266b1a1a94b3e78458f62139cfb79b5dda79291f0457f8cfd4
        checksum/init-fs: 9fffc7fd8ec4bc40fe5ccd305a81d7a041085198b5c7234dd55fa9bcebea0f1c
        checksum/plugins: 2a7cdbd614a303a358a93fb2811d7c8369b6bc6b11a45e68bccb2808132ce625
        checksum/config: 65f431bc1a49c829aaf170bace91bac13c45dadb46d09f1606e6f03d25d08d71
        checksum/secret: 9600e92187afd447887d7464495dfeef6826b3139dea7beea975a4deb8371df5
        checksum/prometheus-config: 204887e7399ae04f247c01829c4243ff0643cf124435be227b1e8c43be38f5e5
        checksum/prometheus-ce-config: 206deb0f476653ebfe6a8b20eab09f3a372dfb7f9ee7df2de5eff4af96860e62
    spec:      
      securityContext:
        fsGroup: 1000
      containers:
        - name: sonarqube
          image: "sonarqube:9.9.0-community"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 9000
              protocol: TCP
            - name: monitoring-web
              containerPort: 8000
              protocol: TCP
            - name: monitoring-ce
              containerPort: 8001
              protocol: TCP
          resources:
            limits:
              cpu: 800m
              memory: 4Gi
            requests:
              cpu: 400m
              memory: 2Gi
          livenessProbe:
            exec:
              command:
              - sh
              - -c
              - |
                host="$(hostname -i || echo '127.0.0.1')"
                reply=$(wget --no-proxy -qO- --header="X-Sonar-Passcode: $SONAR_WEB_SYSTEMPASSCODE" http://${host}:9000/api/system/liveness 2>&1)
                if [ -z "$reply" ]; then exit 0; else exit 1; fi
            initialDelaySeconds: 60
            periodSeconds: 30
            failureThreshold: 6
            timeoutSeconds: 1
          readinessProbe:
            exec:
              command:
              - sh
              - -c
              - |
                #!/bin/bash
                # A Sonarqube container is considered ready if the status is UP, DB_MIGRATION_NEEDED or DB_MIGRATION_RUNNING
                # status about migration are added to prevent the node to be kill while sonarqube is upgrading the database.
                host="$(hostname -i || echo '127.0.0.1')"
                if wget --no-proxy -qO- http://${host}:9000/api/system/status | grep -q -e '"status":"UP"' -e '"status":"DB_MIGRATION_NEEDED"' -e '"status":"DB_MIGRATION_RUNNING"'; then
                	exit 0
                fi
                exit 1
            initialDelaySeconds: 60
            periodSeconds: 30
            failureThreshold: 6
            timeoutSeconds: 1
          startupProbe:
            httpGet:
              scheme: HTTP
              path: /api/system/status
              port: http
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 24
            timeoutSeconds: 1
          securityContext:
            runAsUser: 1000
          volumeMounts:
            - mountPath: /opt/sonarqube/data
              name: sonarqube
              subPath: data
            - mountPath: /opt/sonarqube/temp
              name: sonarqube
              subPath: temp
            - mountPath: /opt/sonarqube/logs
              name: sonarqube
              subPath: logs
            - mountPath: /tmp
              name: tmp-dir
            - mountPath: /opt/sonarqube/conf/prometheus-config.yaml
              subPath: prometheus-config.yaml
              name: prometheus-config
            - mountPath: /opt/sonarqube/conf/prometheus-ce-config.yaml
              subPath: prometheus-ce-config.yaml
              name: prometheus-ce-config
      serviceAccountName: default
      volumes:
      - name: init-sysctl
        configMap:
          name: ingress-values.yaml-sonarqube-init-sysctl
          items:
            - key: init_sysctl.sh
              path: init_sysctl.sh
      - name: init-fs
        configMap:
          name: ingress-values.yaml-sonarqube-init-fs
          items:
            - key: init_fs.sh
              path: init_fs.sh
      - name: install-plugins
        configMap:
          name: ingress-values.yaml-sonarqube-install-plugins
          items:
            - key: install_plugins.sh
              path: install_plugins.sh
      - name: prometheus-config
        configMap:
          name: ingress-values.yaml-sonarqube-prometheus-config
          items:
            - key: prometheus-config.yaml
              path: prometheus-config.yaml
      - name: prometheus-ce-config
        configMap:
          name: ingress-values.yaml-sonarqube-prometheus-ce-config
          items:
            - key: prometheus-ce-config.yaml
              path: prometheus-ce-config.yaml
      - name: sonarqube
        emptyDir:
          {}
      - name : tmp-dir
        emptyDir:
          {}
---
# Source: sonarqube/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-values.yaml-sonarqube
  labels:
    app: sonarqube
    chart: sonarqube-9.4.3
    release: ingress-values.yaml
    heritage: Helm
    traffic-type: external
  annotations:
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "8m"
spec:
  rules:
  - host: sonarqube.your-org.com
    http:
      paths:
      - backend:
          service:
            name: someService
            port:
              number: 1010
        path: /
        pathType: ImplementationSpecific
  tls:
    - hosts:
      - chart-example.local
      secretName: chart-example-tls
---
# Source: sonarqube/templates/secret.yaml
---
---
# Source: sonarqube/templates/tests/sonarqube-test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "ingress-values.yaml-ui-test"
  annotations:
    "helm.sh/hook": test-success
  labels:
    app: sonarqube
    chart: sonarqube-9.4.3
    release: ingress-values.yaml
    heritage: Helm
spec:
  containers:
    - name: ingress-values.yaml-ui-test
      image: "bitnami/minideb-extras"
      imagePullPolicy: IfNotPresent
      command: [
        "/tools/bats/bin/bats",
        "--tap",
        "/tests/run.sh"]
      resources:
        {}
      volumeMounts:
      - mountPath: /tests
        name: tests
        readOnly: true
      - mountPath: /tools
        name: tools
  volumes:
  - name: tests
    configMap:
      name: ingress-values.yaml-sonarqube-tests
  - name: tools
    emptyDir: 
      {}
  restartPolicy: Never
